Added new line with russian text

--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Hello, World! My name is Angelina!</h1>
     <h2>What a beatiful day!</h2>
+    <h3>Текст на русском</h3>
   </body>
 </html>
